Fixed collapsing vertical margins

--- a/CSS Layout Basics/css/style.css
+++ b/CSS Layout Basics/css/style.css
@@ -16,6 +16,12 @@ a {
   Base Layout Styles
 ==================================== */
 
+/* Navigation */
+
+.name {
+    margin: 0;
+}
+
 /* ---- Layout Containers ---- */
 
 .wrapper {
@@ -24,7 +30,8 @@ a {
 }
 
 .main-header {
-	background: #3acec2;
+    background: #3acec2;
+    padding: 1em 0;
 }
 
 .main-footer {
